Absolute path bug was fixed x3.